K8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-alb-ingress
  namespace: prod
spec:
  podSelector:
    matchLabels:
      role: frontend  # Targeting the frontend pod(s)
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: <ALB_IP_RANGE_CIDR>  # Replace with the CIDR range of the ALB
    ports:
    - protocol: TCP
      port: 3000  # Specify the frontend's listening port (e.g., 3000)
  egress:   
  - {}   #Allow all egress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: prod  
spec:
  podSelector:
    matchLabels:
      role: api  
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend  # Allows traffic from frontend pods in the same namespace
    ports:
    - protocol: TCP
      port: 3500  
  egress:   
  - {}   #Allow all egress traffic

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-allow-frontend-backend
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: mongodb  
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend  # Allow traffic from pods labeled as frontend
    - podSelector:
        matchLabels:
          role: api  # Allow traffic from pods labeled as api
    ports:
    - protocol: TCP
      port: 27017  # MongoDB default port
  egress:   
  - {}   #Allow all egress traffic
